Add in Revised Export Format

--- a/Source Code/export_presets.cfg
+++ b/Source Code/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Dropbox/Game Development/Share/LinuxExport/SensoryProfileCalculator.x86_64"
+export_path="../Export/Ubuntu/Debian/SensoryProfileCalculator.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Dropbox/Game Development/Share/WindowsExport/SensoryProfileCalculator.exe"
+export_path="../Export/Windows/SensoryProfileCalculator.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -73,7 +73,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Dropbox/Game Development/Share/OSXExport/SensoryProfileCalculator.zip"
+export_path="../Export/OS X /SensoryProfileCalculator.zip"
 script_export_mode=1
 script_encryption_key=""
 
